<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danielburgnerjr.hawaiimissilealert.AlertsActivity">

    <TextView
        android:id="@+id/txtAlerts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alerts"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnAmberAlertKauai"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/buttonText"
        android:layout_below="@+id/txtAlerts"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:text="@string/amber_alert_kauai" />

    <Button
        android:id="@+id/btnAmberAlertState"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/buttonText"
        android:layout_below="@id/btnAmberAlertKauai"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:text="@string/amber_alert_state" />

    <Button
        android:id="@+id/btnPACOMAlertState"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/buttonText"
        android:layout_below="@id/btnAmberAlertState"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:text="@string/pacom_alert_state" />

    <Button
        android:id="@+id/btnVolcanicActivityAlert"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/buttonText"
        android:layout_below="@id/btnPACOMAlertState"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:text="@string/volcanic_activity_alert" />

    <Button
        android:id="@+id/btnBMDFalseAlarm"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_below="@id/btnVolcanicActivityAlert"
        android:background="@color/colorPrimary"
        android:text="@string/bmd_false_alarm"
        android:textColor="@color/buttonText"
        android:visibility="gone" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</android.widget.RelativeLayout>
