<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danielburgnerjr.hawaiimissilealert.MainActivity">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/buttonText"
        android:layout_below="@+id/txtHeader"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/about" />

    <Button
        android:id="@+id/btnAlerts"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/buttonText"
        android:layout_below="@id/btnAbout"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/alerts" />

    <Button
        android:id="@+id/btnWarnings"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/buttonText"
        android:layout_below="@id/btnAlerts"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/warnings" />

    <Button
        android:id="@+id/btnTests"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_below="@id/btnWarnings"
        android:background="@color/colorPrimary"
        android:text="@string/tests"
        android:textColor="@color/buttonText" />

</android.widget.RelativeLayout>
