<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danielburgnerjr.hawaiimissilealert.WarningsActivity">

    <TextView
        android:id="@+id/txtWarnings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warnings"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btnTsunamiWarning"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/buttonText"
        android:layout_below="@+id/txtWarnings"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:text="@string/tsunami_warning" />

    <Button
        android:id="@+id/btnHighSurfWarning"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/buttonText"
        android:layout_below="@id/btnTsunamiWarning"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:text="@string/high_surf_warning" />

    <Button
        android:id="@+id/btnLandslideHanaRoad"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/buttonText"
        android:layout_below="@id/btnHighSurfWarning"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:text="@string/landslide_hana_road" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</android.widget.RelativeLayout>
