<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danielburgnerjr.hawaiimissilealert.TestsActivity">

    <TextView
        android:id="@+id/txtTests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tests"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnTestMessage"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/buttonText"
        android:layout_below="@+id/txtTests"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:text="@string/test_message" />

    <Button
        android:id="@+id/btnPACOMDrillState"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/buttonText"
        android:layout_below="@id/btnTestMessage"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:text="@string/pacom_alert_drill" />

    <Button
        android:id="@+id/btnAmberAlertDemo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/buttonText"
        android:layout_below="@id/btnPACOMDrillState"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:text="@string/amber_alert_demo" />

</android.widget.RelativeLayout>
